Use TestCompiler for TypeName codegen tests